plugins {
	id 'java'
	id 'org.springframework.boot' version "${spring_boot_version}"
	id 'io.spring.dependency-management' version "${spring_dependency_management_verison}"
	id "io.freefair.lombok" version "${lombok_version}"
}

group = 'com.lameute'
version = '0.1.0'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Postgre
	implementation 'org.postgresql:postgresql'

	//Mapstruct
	implementation "org.mapstruct:mapstruct:${mapstruct_version}"

	// Lombok
	compileOnly "org.projectlombok:lombok:${lombok_dep_version}"

	//runtimeOnly 'org.postgresql:postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	annotationProcessor "org.projectlombok:lombok:${lombok_dep_version}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstruct_version}"
}

tasks.named('test') {
	useJUnitPlatform()
}
